# SPAM

./: .gitignore  AI_Research_Project_Strategy.md  ARDUINO_PYTHON_CONNECTION.md  GUI.py  INTEGRATION_TEST_RESULTS.md  PROGRESS_UPDATE.md  README.md  REPO_CONTEXT.md  SETUP.md  SPAM_firmware.ino  TRANSMISSION_MATRIX_INTEGRATION_TEST_RESULTS.md  __main__.py  app.py  benchmark_report.tex  benchmark_results.md  motor_control_status.py  pyproject.toml  requirements.txt  spam_calc.py  spam_config.json  spam_optimizer.py  start_backend.bat  start_frontend.bat  start_spam.bat  start_spam.sh  test_adc.py  test_optimizer.py  test_spam_calc.py
New folder/: SPAM_Scat_Mat_erfull_murdiag.mat  SPAM_Scat_Mat_erfull_murfull.mat  f_spams2abcd.m
REFACTORED/: GUI.py  requirements.txt
SPAM_CAD/: Assembly_Instructions.md
Simulated Spam Calculations/: Mater_Test.aedtz  SPAM_Scat_Mat_er201205_mur343.mat  SPAM_Scat_Mat_er210205_mur343.mat  f_errT.m  f_solve_dispersion.m
backend/: __init__.py  database.py  main.py  models.py  schemas.py
benchmark_artifacts/: test_optimizer_output.txt
core/: __init__.py  calibration.py  spam_optimizer.py
docs/: HANDOFF_STATUS.md  README.md
frontend/: index.html  package-lock.json  package.json
gui/: __init__.py  callbacks.py  config.py  db_helpers.py  debug_console.py  extraction.py  graphs.py  hardware_mixin.py  measurement.py  themes.py  widgets.py
hardware/: __init__.py  ad7193.py  rf_switch.py  servo.py
spam_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_calibration.py  (+2 more)
(+672 files in other folders)
